# gitmaster

./: .gitignore  last_repo.txt  pyproject.toml  readme.md  requirements.txt
data/gitmaster_w_cioqfp/: faiss.index  metadata.pkl
src/gitmaster/: cli.py  config.py  pr_reviewer.py
src/gitmaster/auth/: github.py  keymanager.py
src/gitmaster/db/: vector_store.py
src/gitmaster/embed/: embedder.py  splitter.py
src/gitmaster/loader/: repo_loader.py
src/gitmaster/rag/: agent.py
src/gitmaster/utils/: logger.py  network.py
